--- a/testpy.html
+++ b/testpy.html
@@ -4,8 +4,13 @@
     <script defer src="https://pyscript.net/alpha/pyscript.js"></script>
   </head>
   <body> 
-      <py-script> 
-          print("Let's compute π:")
+     <b><p>Today is <u><label id='today'></label></u></p></b>
+    <br>
+    <div id="pi" class="alert alert-primary"></div>
+    <py-script>
+import datetime as dt
+pyscript.write('today', dt.date.today().strftime('%A %B %d, %Y'))
+
 def compute_pi(n):
     pi = 2
     for i in range(1,n):
@@ -13,8 +18,7 @@ def compute_pi(n):
     return pi
 
 pi = compute_pi(100000)
-s = f"π is approximately {pi:.3f}"
-print(s)
+pyscript.write('pi', f'π is approximately {pi:.3f}')
       </py-script> 
   </body>
 
