--- a/pyenv_paths.html
+++ b/pyenv_paths.html
@@ -6,7 +6,7 @@
         - numpy
         - matplotlib
         - paths:
-          - /data.py
+          - ./data.py
       </py-env>
     </head>
 
